update subscribe and unsubscribe apis

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
-    "build": {
-      "env": {
-        "JEKYLL_ENV": "production"
-      }
-    },
-    "buildCommand": "bundle exec jekyll build",
-    "installCommand": "bundle install",
-    "outputDirectory": "_site"
+  "build": {
+    "env": {
+      "JEKYLL_ENV": "production"
+    }
+  },
+  "buildCommand": "npm install && bundle install && bundle exec jekyll build",
+  "outputDirectory": "_site",
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs16.x"
+    }
   }
+}
