fix vercel.json config

--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   "outputDirectory": "_site",
   "functions": {
     "api/**/*.js": {
-      "runtime": "nodejs16.x"
+      "runtime": "nodejs16"
     }
   }
 }
