--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,5 @@
     }
   },
   "buildCommand": "npm install && bundle install && bundle exec jekyll build",
-  "outputDirectory": "_site",
+  "outputDirectory": "_site"
 }
